<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@android:id/icon"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <GridLayout
        android:id="@+id/params"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:visibility="gone"
        android:columnCount="2"
        android:padding="10dip"
        android:background="#8000">

        <TextView style="@style/title" android:text="@string/params_strength" />
        <SeekBar
            android:layout_gravity="fill_horizontal"
            android:id="@+id/param_strength"
            android:progress="50" />

        <TextView style="@style/title" android:text="@string/params_dark" />
        <SeekBar
            android:layout_gravity="fill_horizontal"
            android:id="@+id/param_dark"
            android:max="360"
            android:progress="30" />

        <TextView style="@style/title" android:text="@string/params_light" />
        <SeekBar
            android:layout_gravity="fill_horizontal"
            android:id="@+id/param_light"
            android:max="360"
            android:progress="90" />

    </GridLayout>

</FrameLayout>
